--- a/nav.css
+++ b/nav.css
@@ -8,20 +8,23 @@
     list-style: none;
     margin: 0;
     padding: 20px;
-    background-color: white; /* Background color for the navigation bar */
+    background-color: rgb(243, 237, 237); /* Background color for the navigation bar */
     text-align: center;
+    justify-content: center;
 }
-
+.logo{
+    text-align: center;
+    background-color: black;
+    
+}
+    
 .navbar:hover{
     background-color: gray;
     transition: 0.6s;
 }
 
-/* Style for the list items (nav links) */
-.navbar li {
-    display: inline;
-    margin: 20px; /* Add spacing between items */
-}
+
+
 
 /* Style for the links */
 .navbar a {
@@ -40,4 +43,33 @@
     transition: 0.6s;
 }
 
+.log{
+    list-style: none;
+    margin: 0;
+    padding: 20px;
+    background-color: white; /* Background color for the navigation bar */
+    text-align: center;
+    display: flex;
+}
+.log:hover{
+    background-color: gray;
+    transition: 0.6s;
+}
+
+.log li{
+    display: inline;
+    margin-left: 40%;
+}
+
+.log a {
+    text-decoration: none; /*blue and underline gone */
+    color: rgb(0, 0, 0); /* Text color for the links */
+    font-weight: bold; /* Make the text bold */
+    padding: 5px 20px;
+    border: 1px solid black;
+    border-radius: 4px;}
+
+#logsign{
+    float: right;
+}
 
